<resources>
    <string name="app_name">BinList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="type">TYPE</string>
    <string name="prepaid">PREPAID</string>
    <string name="bank">BANK</string>
    <string name="country">COUNTRY</string>
    <string name="brand">BRAND</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="bin_input_title">Enter the first digits of a card number (BIN/IIN)</string>
</resources>